Fixed my incorrect implementation of the Dependency file explanations & code display. - Should now match the design. - Added styling for scrollbars - fixed issue with simulation content & overflow on modals

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+html {
+  background-color: #101D42;
+}
 body {
+  background-color: #101D42;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
